--- a/spring-jpa/src/main/resources/application.properties
+++ b/spring-jpa/src/main/resources/application.properties
@@ -1,11 +1,22 @@
-# Database Configuration (for H2 database)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Set the server port to 8088
+server.port=8088
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/spring-jpa
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Enable Spring Boot Actuator endpoints
-management.endpoints.web.exposure.include=health,info,metrics
+
+# Enable the Detailed Error information
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+
+# Enable all Actuator endpoints
+management.endpoints.web.exposure.include=*
