--- a/spring-jpa/src/main/resources/application.properties
+++ b/spring-jpa/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8088
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/spring-jpa
+spring.datasource.url=jdbc:mysql://localhost:3306/idp
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
