Medicine with purchase date

--- a/Hospital-IPD-management/angular.json
+++ b/Hospital-IPD-management/angular.json
@@ -50,6 +50,7 @@
                   "maximumError": "4kb"
                 }
               ],
+              "aot": true,
               "outputHashing": "all"
             },
             "development": {
