--- a/spring-jpa/pom.xml
+++ b/spring-jpa/pom.xml
@@ -77,6 +77,12 @@
             <version>5.7.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.11.6</version> <!-- Use the latest version -->
+        </dependency>
     </dependencies>
 
     <build>
